@@ -120,8 +120,9 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
         [unit]
             # Unhealable unit
             x,y=9,8
-            type="Peasant"
+            type="Peasant_unhealable"
             name="Unhealable"
+            image_icon="misc/key.png"
             generate_name=yes
             [status]
                 unhealable=yes
@@ -3102,6 +3103,16 @@ Result:
         [/unit]
     [/event]
 [/test]
+
+[+units]
+    [unit_type]
+        id=Peasant_unhealable
+        [base_unit]
+            id=Peasant
+        [/base_unit]
+        image_icon="misc/key.png"
+    [/unit_type]
+[/units]
 
 [+language]
     range_very_long= _ "very long"
